- sixth commit (fix some tests and naming in html files)